@@ -40,42 +40,44 @@ CHAR16 *gCsrStatus = NULL;
 // present and the firmware is Apple, fake it and claim it is enabled, since
 // that's how OS X 10.11 treats a system with the variable absent.
 EFI_STATUS GetCsrStatus (
-    UINT32 *CsrStatus
+    IN OUT UINT32 *CsrStatus
 ) {
+    EFI_STATUS  Status;
     UINTN       CsrLength;
     UINT32     *ReturnValue  = NULL;
     EFI_GUID    CsrGuid      = APPLE_GUID;
-    EFI_STATUS  Status       = EFI_INVALID_PARAMETER;
 
-    if (CsrStatus) {
-        Status = EfivarGetRaw (
-            &CsrGuid,
-            L"csr-active-config",
-            (CHAR8**) &ReturnValue,
-            &CsrLength
-        );
+    Status = EfivarGetRaw (
+        &CsrGuid,
+        L"csr-active-config",
+        (CHAR8**) &ReturnValue,
+        &CsrLength
+    );
 
-        if (Status == EFI_SUCCESS) {
-            if (CsrLength == 4) {
-                *CsrStatus = *ReturnValue;
-            }
-            else {
-                Status     = EFI_BAD_BUFFER_SIZE;
-                gCsrStatus = StrDuplicate (L"Unknown SIP/SSV Status");
-            }
-
-            MyFreePool (&ReturnValue);
+    if (Status == EFI_SUCCESS) {
+        if (CsrLength == 4) {
+            *CsrStatus = *ReturnValue;
         }
-        else if (Status == EFI_NOT_FOUND &&
-            StriSubCmp (L"Apple", gST->FirmwareVendor)
-        ) {
-            *CsrStatus = SIP_ENABLED;
-            Status = EFI_SUCCESS;
-        } // if (Status == EFI_SUCCESS)
-    } // if (CsrStatus)
+        else {
+            Status     = EFI_BAD_BUFFER_SIZE;
+            gCsrStatus = StrDuplicate (L"Unknown SIP/SSV Status");
+        }
+
+        MyFreePool (&ReturnValue);
+    }
+    else if (Status == EFI_NOT_FOUND) {
+        *CsrStatus = SIP_ENABLED_EX;
+        gCsrStatus = StrDuplicate (L"SIP/SSV Enabled (Cleared/Empty)");
+
+        // Treat as Success
+        Status = EFI_SUCCESS;
+    }
+    else {
+        gCsrStatus = StrDuplicate (L"Error While Getting SIP/SSV Status");
+    }
 
     return Status;
-} // INTN GetCsrStatus()
+} // EFI_STATUS GetCsrStatus()
 
 // Store string describing CSR status value in gCsrStatus variable, which appears
 // on the Info page. If DisplayMessage is TRUE, displays the new value of
@@ -87,6 +89,11 @@ VOID RecordgCsrStatus (
     EG_PIXEL BGColor = COLOR_LIGHTBLUE;
 
     switch (CsrStatus) {
+        // SIP "Cleared" Setting
+        case SIP_ENABLED_EX:
+            gCsrStatus = PoolPrint (L"SIP/SSV Enabled (Cleared/Empty)");
+            break;
+
         // SIP "Enabled" Setting
         case SIP_ENABLED:
             gCsrStatus = PoolPrint (
@@ -98,7 +105,9 @@ VOID RecordgCsrStatus (
         // SIP "Disabled" Settings
         case SIP_DISABLED:
         case SIP_DISABLED_EX:
-        case SIP_DISABLED_KXT:
+        case SIP_DISABLED_DBG:
+        case SIP_DISABLED_KEXT:
+        case SIP_DISABLED_EXTRA:
             gCsrStatus = PoolPrint (
                 L"SIP Disabled (0x%04x)",
                 CsrStatus
@@ -180,29 +189,60 @@ VOID RotateCsrValue (VOID) {
         }
 
         #if REFIT_DEBUG > 0
-        LOG(1, LOG_LINE_NORMAL,
-            L"CSR value was 0x%04x; setting to 0x%04x",
-            CurrentValue, TargetCsr
-        );
+        if (TargetCsr == 0) {
+            // Set target CSR value to NULL
+            LOG(1, LOG_LINE_NORMAL,
+                L"CSR value was 0x%04x; setting to NULL",
+                CurrentValue
+            );
+        }
+        else if (CurrentValue == 0) {
+            LOG(1, LOG_LINE_NORMAL,
+                L"CSR value was NULL; setting to 0x%04x",
+                TargetCsr
+            );
+        }
+        else {
+            LOG(1, LOG_LINE_NORMAL,
+                L"CSR value was 0x%04x; setting to 0x%04x",
+                CurrentValue, TargetCsr
+            );
+        }
         #endif
 
-        Status = EfivarSetRaw (
-            &CsrGuid,
-            L"csr-active-config",
-            (CHAR8 *) &TargetCsr,
-            4,
-            TRUE
-        );
+        if (TargetCsr != 0) {
+            Status = EfivarSetRaw (
+                &CsrGuid,
+                L"csr-active-config",
+                (CHAR8 *) &TargetCsr,
+                4, TRUE
+            );
+        }
+        else {
+            #if REFIT_DEBUG > 0
+            LOG(4, LOG_LINE_NORMAL,
+                L"Clearing from Hardware NVRAM:- 'csr-active-config'"
+            );
+            #endif
+
+            UINT32 StorageFlags   = EFI_VARIABLE_BOOTSERVICE_ACCESS;
+            StorageFlags         |= EFI_VARIABLE_RUNTIME_ACCESS;
+            StorageFlags         |= EFI_VARIABLE_NON_VOLATILE;
+            Status = refit_call5_wrapper(
+                gRT->SetVariable, L"csr-active-config",
+                &CsrGuid, StorageFlags, 0, NULL
+            );
+        }
 
         if (Status == EFI_SUCCESS) {
             RecordgCsrStatus (TargetCsr, TRUE);
 
             #if REFIT_DEBUG > 0
-            LOG(2, LOG_LINE_NORMAL, L"Successful setting of CSR value of 0x%04x", TargetCsr);
+            LOG(2, LOG_LINE_NORMAL, L"Successfully Set SIP/SSV:- '0x%04x'", TargetCsr);
             #endif
         }
         else {
-            gCsrStatus = StrDuplicate (L"Error While Setting SIP/SSV Status");
+            gCsrStatus = StrDuplicate (L"Error While Setting SIP/SSV");
 
             #if REFIT_DEBUG > 0
             LOG(1, LOG_LINE_NORMAL, gCsrStatus);
@@ -240,8 +280,8 @@ VOID RotateCsrValue (VOID) {
  * https://lists.gnu.org/archive/html/grub-devel/2013-12/msg00442.html
  */
 
-#define EFI_APPLE_SET_OS_PROTOCOL_GUID  \
-{ 0xc5c5da95, 0x7d5c, 0x45e6, { 0xb2, 0xf1, 0x3f, 0xd5, 0x2b, 0xb1, 0x00, 0x77 } }
+#define EFI_APPLE_SET_OS_PROTOCOL_GUID  { 0xc5c5da95, 0x7d5c, 0x45e6, \
+    { 0xb2, 0xf1, 0x3f, 0xd5, 0x2b, 0xb1, 0x00, 0x77 } }
 
 typedef struct EfiAppleSetOsInterface {
     UINT64 Version;
